# rustmandel

./: .gitignore  Cargo.toml  LICENSE  README.md  Settings.toml
compute/: .gitignore  .gitpod.yml  Cargo.toml
compute/src/lib/: buddha.rs  defaults.rs  func.rs  lib.rs  mandel.rs
frontend/: .gitignore  Cargo.toml  README.md  Settings.toml
frontend/save/cfg/: angel  angel.cfg  min_re_-0.1027853213110878_min_im_-2.022780991931542_max_re_0.7439175020730902_max_im_-1.1679041077843717_max_it_10_fractal_Mandelbrot_fractal_type_Mandelbrot_color_scheme_Silver.cfg  min_re_-0.4288477048398867_min_im_-2.0352492857142868_max_re_3.4919485135148878_max_im_2.060750714285714_max_it_304_fractal_Mandelbrot_fractal_type_Mandelbrot_color_scheme_Silver.cfg  min_re_-0.5511202001911897_min_im_-1.8847558285107426_max_re_1.5651836315181946_max_im_0.2308209154505411_max_it_482_fractal_Mandelbrot_fractal_type_Mandelbrot_color_scheme_Red.cfg  min_re_-0.6188704116489758_min_im_-0.8496203949367085_max_re_1.0216585761169843_max_im_0.8281012050632923_max_it_38_fractal_Mandelbrot_fractal_type_Mandelbrot_color_scheme_Silver.cfg  min_re_-0.7284542908650495_min_im_-0.5125315900190661_max_re_0.3172392268852553_max_im_0.5233482049792872_max_it_3_fractal_Mandelbrot_fractal_type_Mandelbrot_color_scheme_Silver.cfg  min_re_-0.7765519394382696_min_im_-1.751936150005764_max_re_-0.7614565249345511_max_im_-1.736813903589286_max_it_9_fractal_Mandelbrot_fractal_type_Mandelbrot_color_scheme_Silver.cfg  min_re_-0.8673288912750982_min_im_-1.0413100000000008_max_re_1.2064474490492867_max_im_1.055842_max_it_352_fractal_Buddhabrot_fractal_type_Mandelbrot_color_scheme_Silver.cfg  min_re_-0.9483049633490954_min_im_-1.6381207165787575_max_re_2.286786127556945_max_im_1.6386438270530865_max_it_7_fractal_Mandelbrot_fractal_type_Mandelbrot_color_scheme_Silver.cfg  min_re_-1.0329717764585085_min_im_-1.0402122720000009_max_re_1.0408045638658763_max_im_1.056939728_max_it_352_fractal_Buddhabrot_fractal_type_Julia_color_scheme_Silver.cfg  (+190 more)
frontend/src/: main.rs
frontend/src/lib/: app_cfg.rs  defaults.rs  lib.rs
src/: main.rs  mandel.rs
(+291 files in other folders)
