[package]
name = "mandel"
version = "0.1.0"
authors = ["Cornel Izbasa <badc0ded@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "*"
num-complex = { version = "*", features = ["serde"] }
num-derive = "*"
num-traits = "*"
chrono = "*"
num = "0.2.1"
image = "0.23.0"
piston = "*"
piston_window = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
rand = "*"